--- a/src/styles/stopwatch.module.css
+++ b/src/styles/stopwatch.module.css
@@ -1,10 +1,29 @@
 .main {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
   align-items: center;
   height: 100vh;
   width: 100vw;
+}
+
+.heading {
+  text-align: center;
+  text-decoration: underline;
+  margin-bottom: 2rem;
+}
+
+.clockMain {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.lapses {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .clock {
@@ -25,6 +44,7 @@
   justify-content: center;
   align-items: center;
   gap: 1rem;
+  margin-bottom: 1rem;
 }
 
 .btn {
